Bug 139604 - CALC - is slow when cells contain long texts and text wrapping is set.
Summary: CALC - is slow when cells contain long texts and text wrapping is set.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.0.0.3 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0
Keywords:
: 119650 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-01-14 11:37 UTC by kabilo
Modified: 2022-04-14 08:06 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
test file (49.82 KB, application/vnd.oasis.opendocument.spreadsheet)
2021-01-14 11:38 UTC, kabilo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kabilo 2021-01-14 11:37:37 UTC
Description:
Calc is slow when cells contain long texts and text wrapping is set. The document opens slowly, movement on these cells is slow. Program freezes occasionally (not responding). A small test file is attached.

Actual Results:
work with the document is slow

Expected Results:
acceleration


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Version: 7.0.4.2 (x64)
Build ID: dcf040e67528d9187c66b2379df5ea4407429775
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: cs-CZ (cs_CZ); UI: cs-CZ
Calc: CL
Comment 1 kabilo 2021-01-14 11:38:22 UTC
Created attachment 168876 [details]
test file
Comment 2 m_a_riosv 2021-01-15 00:00:41 UTC
Reproducible, takes a long long time (instant with excel)
Version: 7.2.0.0.alpha0+ (x64)
Build ID: 80497c7d81af36f703d122ac78baa26387a5854d
CPU threads: 4; OS: Windows 10.0 Build 21292; UI render: default; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL
Comment 3 Commit Notification 2022-04-14 06:34:37 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6c8dffc19e2a570d5665344dcba6afedd3dc2e15

compute subset of glyphs in SalLayoutGlyphsCache (tdf#139604)

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Luboš Luňák 2022-04-14 08:02:36 UTC
It's probably as good as it gets now. It'd be faster if the cells didn't set alignment to the bottom.
Comment 5 Luboš Luňák 2022-04-14 08:06:37 UTC
*** Bug 119650 has been marked as a duplicate of this bug. ***