vcl/source/gdi/impglyphitem.cxx
@@ -89,6 +89,68 @@ void SalLayoutGlyphs::AppendImpl(SalLayoutGlyphsImpl* pImpl)
 
 SalLayoutGlyphsImpl* SalLayoutGlyphsImpl::clone() const { return new SalLayoutGlyphsImpl(*this); }
 
+// Clone, but only glyphs in the given range in the original text string.
+// It is possible the given range may not be cloned, in which case this returns nullptr.
+SalLayoutGlyphsImpl* SalLayoutGlyphsImpl::cloneCharRange(sal_Int32 index, sal_Int32 length) const
+{
+    std::unique_ptr<SalLayoutGlyphsImpl> copy(new SalLayoutGlyphsImpl(*GetFont()));
+    copy->SetFlags(GetFlags());
+    copy->reserve(std::min<size_t>(size(), length));
+    // Skip glyphs that are in the string before the given index (glyphs are sorted by charPos()).
+    const_iterator pos = std::partition_point(
+        begin(), end(), [index](const GlyphItem& it) { return it.charPos() < index; });
+    if (pos == end())
+        return nullptr;
+    // Require a start at the exact position given, otherwise bail out.
+    // TODO: This bails out also for RTL text.
+    if (pos->charPos() != index)
+        return nullptr;
+    // Don't create a subset if it's not safe to break at the beginning or end of the sequence
+    // (https://harfbuzz.github.io/harfbuzz-hb-buffer.html#hb-glyph-flags-t).
+    if (pos->IsUnsafeToBreak() || (pos->IsInCluster() && !pos->IsClusterStart()))
+        return nullptr;
+    // LinearPos needs adjusting to start at xOffset/yOffset for the first item,
+    // that's how it's computed in GenericSalLayout::LayoutText().
+    DevicePoint zeroPoint = pos->linearPos() - DevicePoint(pos->xOffset(), pos->yOffset());
+    // Add and adjust all glyphs until the given length.
+    while (pos != end() && pos->charPos() < index + length)
+    {
+        if (pos->IsRTLGlyph())
+            return nullptr; // Don't mix RTL and non-RTL runs.
+        copy->push_back(*pos);
+        copy->back().setLinearPos(copy->back().linearPos() - zeroPoint);
+        ++pos;
+    }
+    if (pos != end())
+    {
+        if (pos->charPos() != index + length)
+            return nullptr;
+        if (pos->IsUnsafeToBreak() || (pos->IsInCluster() && !pos->IsClusterStart()))
+            return nullptr;
+    }
+    return copy.release();
+}
+
+#ifdef DBG_UTIL
+bool SalLayoutGlyphsImpl::isEqual(const SalLayoutGlyphsImpl* other) const
+{
+    if (GetFont()->mxFontMetric != other->GetFont()->mxFontMetric)
+        return false;
+    if (GetFlags() != other->GetFlags())
+        return false;
+    if (empty() || other->empty())
+        return empty() == other->empty();
+    if (size() != other->size())
+        return false;
+    for (size_t pos = 0; pos < size(); ++pos)
+    {
+        if ((*this)[pos] != (*other)[pos])
+            return false;
+    }
+    return true;
+}
+#endif
+
 bool SalLayoutGlyphsImpl::IsValid() const
 {
     if (!m_rFontInstance.is())
@@ -102,15 +164,52 @@ SalLayoutGlyphsCache* SalLayoutGlyphsCache::self()
     return cache.get();
 }
 
+static SalLayoutGlyphs makeGlyphsSubset(const SalLayoutGlyphs& source, sal_Int32 index,
+                                        sal_Int32 len)
+{
+    SalLayoutGlyphs ret;
+    for (int level = 0;; ++level)
+    {
+        const SalLayoutGlyphsImpl* sourceLevel = source.Impl(level);
+        if (sourceLevel == nullptr)
+            break;
+        if (level > 0) // TODO: Fallbacks do not work reliably.
+            return SalLayoutGlyphs();
+        SalLayoutGlyphsImpl* cloned = sourceLevel->cloneCharRange(index, len);
+        // If the glyphs range cannot be cloned, bail out.
+        if (cloned == nullptr)
+            return SalLayoutGlyphs();
+        ret.AppendImpl(cloned);
+    }
+    return ret;
+}
+
+#ifdef DBG_UTIL
+static void checkGlyphsEqual(const SalLayoutGlyphs& g1, const SalLayoutGlyphs& g2)
+{
+    for (int level = 0;; ++level)
+    {
+        const SalLayoutGlyphsImpl* l1 = g1.Impl(level);
+        const SalLayoutGlyphsImpl* l2 = g2.Impl(level);
+        if (l1 == nullptr || l2 == nullptr)
+        {
+            assert(l1 == l2);
+            break;
+        }
+        assert(l1->isEqual(l2));
+    }
+}
+#endif
+
 const SalLayoutGlyphs*
 SalLayoutGlyphsCache::GetLayoutGlyphs(VclPtr<const OutputDevice> outputDevice, const OUString& text,
                                       sal_Int32 nIndex, sal_Int32 nLen, tools::Long nLogicWidth,
-                                      const vcl::text::TextLayoutCache* layoutCache) const
+                                      const vcl::text::TextLayoutCache* layoutCache)
 {
     if (nLen == 0)
         return nullptr;
     const CachedGlyphsKey key(outputDevice, text, nIndex, nLen, nLogicWidth);
-    auto it = mCachedGlyphs.find(key);
+    GlyphsCache::const_iterator it = mCachedGlyphs.find(key);
     if (it != mCachedGlyphs.end())
     {
         if (it->second.IsValid())
@@ -120,12 +219,6 @@ SalLayoutGlyphsCache::GetLayoutGlyphs(VclPtr<const OutputDevice> outputDevice, c
         // So in that case this is a cached failure.
         return nullptr;
     }
-    std::shared_ptr<const vcl::text::TextLayoutCache> tmpLayoutCache;
-    if (layoutCache == nullptr)
-    {
-        tmpLayoutCache = OutputDevice::CreateTextLayoutCache(text);
-        layoutCache = tmpLayoutCache.get();
-    }
 #if !ENABLE_FUZZERS
     const SalLayoutFlags glyphItemsOnlyLayout = SalLayoutFlags::GlyphItemsOnly;
 #else
@@ -133,6 +226,41 @@ SalLayoutGlyphsCache::GetLayoutGlyphs(VclPtr<const OutputDevice> outputDevice, c
     const SalLayoutFlags glyphItemsOnlyLayout
         = SalLayoutFlags::GlyphItemsOnly | SalLayoutFlags::BiDiStrong;
 #endif
+    if (nIndex != 0 || nLen != text.getLength())
+    {
+        // The glyphs functions are often called first for an entire string
+        // and then with an increasing starting index until the end of the string.
+        // Which means it's possible to get the glyphs faster by just copying
+        // a subset of the full glyphs and adjusting as necessary.
+        if (mLastTemporaryKey.has_value() && mLastTemporaryKey == key)
+            return &mLastTemporaryGlyphs;
+        const CachedGlyphsKey keyWhole(outputDevice, text, 0, text.getLength(), nLogicWidth);
+        GlyphsCache::const_iterator itWhole = mCachedGlyphs.find(keyWhole);
+        if (itWhole != mCachedGlyphs.end() && itWhole->second.IsValid())
+        {
+            mLastTemporaryGlyphs = makeGlyphsSubset(itWhole->second, nIndex, nLen);
+            if (mLastTemporaryGlyphs.IsValid())
+            {
+                mLastTemporaryKey = std::move(key);
+#ifdef DBG_UTIL
+                // Check if the subset result really matches what we would get normally,
+                // to make sure corner cases are handled well (see SalLayoutGlyphsImpl::cloneCharRange()).
+                std::unique_ptr<SalLayout> layout
+                    = outputDevice->ImplLayout(text, nIndex, nLen, Point(0, 0), nLogicWidth, {},
+                                               glyphItemsOnlyLayout, layoutCache);
+                assert(layout);
+                checkGlyphsEqual(mLastTemporaryGlyphs, layout->GetGlyphs());
+#endif
+                return &mLastTemporaryGlyphs;
+            }
+        }
+    }
+    std::shared_ptr<const vcl::text::TextLayoutCache> tmpLayoutCache;
+    if (layoutCache == nullptr)
+    {
+        tmpLayoutCache = OutputDevice::CreateTextLayoutCache(text);
+        layoutCache = tmpLayoutCache.get();
+    }
     std::unique_ptr<SalLayout> layout = outputDevice->ImplLayout(
         text, nIndex, nLen, Point(0, 0), nLogicWidth, {}, glyphItemsOnlyLayout, layoutCache);
     if (layout)
